# hamp

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: python-app.yml
doc/: data-format.md  users-guide.md
hamp/: ._hwtypes_firrtl.py.swp  __init__.py  _ast.py  _builder.py  _convert.py  _db.py  _firrtl.py  _generate.py  _hwtypes.py  _hwtypes_firrtl.py  _memory.py  _module.py  _reduce.py  _show.py  _stdlib.py  _struct.py  tst_ast.py
tests/: .gitignore  .test_firrtl.py.swp  assertf_exp.fir  composit_register_exp.fir  counter_exp.fir  coverf_exp.fir  data_types_exp.fir  functional_exp.fir  index_exp.fir  logexp_exp.fir  memories_exp.fir  mux4_exp.fir  ops_exp.fir  printf_exp.fir  simple_exp.fir  struct_exp.fir  test_builder.py  test_convert.py  test_db.py  test_firrtl.py  test_hwtypes.py  test_memory.py  test_module.py  test_show.py  test_stdlib.py  test_struct.py
